syntax = "proto3";

package blog;

option go_package="./blog/blogpb";

message Blog{
    string id=1;
    string author_id=2;
    string title=3;
    string content=4;
}

message CreateBlogRequest{
    Blog blog=1;
}
message CreateBlogResponse{
    Blog blog=1; //this one will have id
}

message ReadBlogRequest{
    string id=1;
}
message ReadBlogResponse{
    Blog blog=1; //Return NOT_FOUND id data is not present
}

message UpdateBlogRequest{
    Blog blog=1;
}
message UpdateBlogResponse{
    Blog blog=1; //Return NOT_FOUND id data is not present
}
message DeleteBlogRequest{
    string id=1;
}
message DeleteBlogResponse{
    string id=1;
}
message ListBlogRequest{
}
message ListBlogResponse{
    Blog blog=1;
}


service BlogService{
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse);
    rpc Readblog (ReadBlogRequest) returns (ReadBlogResponse); 
    rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse);
    rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse);
    rpc ListBlog(ListBlogRequest) returns (stream ListBlogResponse);
}


